# uuid-example

./: .gitignore  LICENSE  README.md  uuid-example.cabal  uuid-study.cabal
src/: uuid.hs
