name:                uuid-study
version:             1.0
synopsis:            Studying how to use the uuid library
description:         Studying how to use the uuid library  
license:             BSD3
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2014 Dino Morelli
category:            Study
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable uuid-study
   main-is:             uuid.hs
   build-depends:       base >=4.7 && <4.8,
                        utf8-string,
                        uuid
   hs-source-dirs:      src
   default-language:    Haskell2010
